Add game and simple scss

--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,11 @@
+.red {
+  color: red;
+  text-transform: uppercase;
+}
+
+.green {
+  color: green;
+  text-transform: uppercase;
+}
 
 /*# sourceMappingURL=style.css.map */
